Finish Mudde Kaltwasser A

--- a/uni/Klassifizierung_von_Parteien/04_Threat_or_Corrective?_Braucht_die_Demokratie_den_Populismus/MRK_a.html
+++ b/uni/Klassifizierung_von_Parteien/04_Threat_or_Corrective?_Braucht_die_Demokratie_den_Populismus/MRK_a.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-05-06 Sun 14:52 -->
+<!-- 2018-05-06 Sun 17:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -179,6 +179,17 @@
   .org-svg { width: 90%; }
   /*]]>*/-->
 </style>
+<link rel="stylesheet" type="text/css" href="https://www.pirilampo.org/styles/bigblow/css/htmlize.css"/>
+<link rel="stylesheet" type="text/css" href="https://www.pirilampo.org/styles/bigblow/css/bigblow.css"/>
+<link rel="stylesheet" type="text/css" href="https://www.pirilampo.org/styles/bigblow/css/hideshow.css"/>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/jquery-ui-1.10.2.min.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/jquery.localscroll-min.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/jquery.zclip.min.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/bigblow.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/bigblow/js/hideshow.js"></script>
+<script type="text/javascript" src="https://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
@@ -232,28 +243,42 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6d70012">1. Populism and (liberal) democracy: a framework for analysis</a>
+<li><a href="#org2265dc9">1. Populism and (liberal) democracy: a framework for analysis</a>
 <ul>
-<li><a href="#orgd798784">1.1. Einleitung</a></li>
-<li><a href="#orgac1cb02">1.2. Definition von Populismus</a>
+<li><a href="#orgf3a1a36">1.1. Einleitung</a></li>
+<li><a href="#org74c9733">1.2. Definition von Populismus</a>
 <ul>
-<li><a href="#orgba59942">1.2.1. Geschichte des Begriffs "Populismus"</a></li>
-<li><a href="#org36fedd1">1.2.2. Untersuchung dreier Populismus Konzepte</a></li>
-<li><a href="#orgb04ce81">1.2.3. Minimale Definition von Populismus</a></li>
+<li><a href="#orged749fc">1.2.1. Geschichte des Begriffs "Populismus"</a></li>
+<li><a href="#org3e31b37">1.2.2. Untersuchung dreier Populismus Konzepte</a></li>
+<li><a href="#org8882814">1.2.3. Minimale Definition von Populismus</a></li>
 </ul>
 </li>
-<li><a href="#orgbd76f08">1.3. Defition von Demokratie</a></li>
+<li><a href="#org01979b6">1.3. Definition von Demokratie</a>
+<ul>
+<li><a href="#orgb359cb9">1.3.1. Demokratie</a></li>
+<li><a href="#orgdc6ad92">1.3.2. Liberale Demokratie</a></li>
+<li><a href="#org5b76503">1.3.3. Radikale Demokratie</a></li>
+</ul>
+</li>
+<li><a href="#org442cc23">1.4. Populismus &amp; Demokratie: Freund &amp; Feind</a></li>
+<li><a href="#orgdf5dc55">1.5. Einfluss von Populismus auf Demokratiequalität: Freund &amp; Feind</a>
+<ul>
+<li><a href="#org053514e">1.5.1. Positive Effekte</a></li>
+<li><a href="#orgb751701">1.5.2. Negative Effekte</a></li>
+</ul>
+</li>
+<li><a href="#org0e1bd09">1.6. Wann wirkt Populismus positiv?</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org6d70012" class="outline-2">
-<h2 id="org6d70012"><span class="section-number-2">1</span> Populism and (liberal) democracy: a framework for analysis</h2>
+<div id="outline-container-org2265dc9" class="outline-2">
+<h2 id="org2265dc9"><span class="section-number-2">1</span> Populism and (liberal) democracy: a framework for analysis</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd798784" class="outline-3">
-<h3 id="orgd798784"><span class="section-number-3">1.1</span> Einleitung</h3>
+<div id="outline-container-orgf3a1a36" class="outline-3">
+<h3 id="orgf3a1a36"><span class="section-number-3">1.1</span> Einleitung</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>Versuch der Konstruktion eines Gedankengerüsts in dem der oft missbrauchte, nicht klare Begriff "Populismus" eine eindeutige Bedeutung hat und in dem die Beziehung zwischen Populismus und Demokratie <i>empirisch</i> untersucht werden kann
@@ -272,12 +297,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgac1cb02" class="outline-3">
-<h3 id="orgac1cb02"><span class="section-number-3">1.2</span> Definition von Populismus</h3>
+<div id="outline-container-org74c9733" class="outline-3">
+<h3 id="org74c9733"><span class="section-number-3">1.2</span> Definition von Populismus</h3>
 <div class="outline-text-3" id="text-1-2">
 </div>
-<div id="outline-container-orgba59942" class="outline-4">
-<h4 id="orgba59942"><span class="section-number-4">1.2.1</span> Geschichte des Begriffs "Populismus"</h4>
+<div id="outline-container-orged749fc" class="outline-4">
+<h4 id="orged749fc"><span class="section-number-4">1.2.1</span> Geschichte des Begriffs "Populismus"</h4>
 <div class="outline-text-4" id="text-1-2-1">
 <ul class="org-ul">
 <li>Ursprünge im 19 Jahrhundert
@@ -294,12 +319,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org36fedd1" class="outline-4">
-<h4 id="org36fedd1"><span class="section-number-4">1.2.2</span> Untersuchung dreier Populismus Konzepte</h4>
+<div id="outline-container-org3e31b37" class="outline-4">
+<h4 id="org3e31b37"><span class="section-number-4">1.2.2</span> Untersuchung dreier Populismus Konzepte</h4>
 <div class="outline-text-4" id="text-1-2-2">
 </div>
 <ol class="org-ol">
-<li><a id="orgc391e77"></a>Populismus als Form der pol Bewegung<br />
+<li><a id="orgccb0778"></a>Populismus als Form der pol Bewegung<br />
 <div class="outline-text-5" id="text-1-2-2-1">
 <ul class="org-ul">
 <li>Fundament dieser Definition stammt von Lipset &amp; Seymour</li>
@@ -317,7 +342,7 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="orgfd1ebdc"></a>Populismus als pol Stil<br />
+<li><a id="orga9823f2"></a>Populismus als pol Stil<br />
 <div class="outline-text-5" id="text-1-2-2-2">
 <ul class="org-ul">
 <li>Populismus als pol Stil der aus opportunistischen Gründen eine bestimmte "Verbindung" zwischen pol Führern und Wählerschaft propagiert, um hauptsächlich an pol. Macht zu gelangen
@@ -331,7 +356,7 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </li>
-<li><a id="org3e5f354"></a>Populismus als "political logic"<br />
+<li><a id="org310d3bc"></a>Populismus als "political logic"<br />
 <div class="outline-text-5" id="text-1-2-2-3">
 <ul class="org-ul">
 <li>Populismus als "political logic" und nicht als Resultat bestimmter Klassenzusammenschlüsse 
@@ -357,8 +382,8 @@ Problem dieses Ansatzes ist, dass er einerseits zu abstrakt ist und andererseits
 </ol>
 </div>
 
-<div id="outline-container-orgb04ce81" class="outline-4">
-<h4 id="orgb04ce81"><span class="section-number-4">1.2.3</span> Minimale Definition von Populismus</h4>
+<div id="outline-container-org8882814" class="outline-4">
+<h4 id="org8882814"><span class="section-number-4">1.2.3</span> Minimale Definition von Populismus</h4>
 <div class="outline-text-4" id="text-1-2-3">
 <ul class="org-ul">
 <li>seit 1990 wichtige Entwicklungen in der Debatte rund um die Definition von Populismus
@@ -370,7 +395,7 @@ Problem dieses Ansatzes ist, dass er einerseits zu abstrakt ist und andererseits
 </div>
 
 <ol class="org-ol">
-<li><a id="org79678ab"></a>Zwei unterschiedliche Arten von Kategorisierung<br />
+<li><a id="orgab7b54b"></a>Zwei unterschiedliche Arten von Kategorisierung<br />
 <div class="outline-text-6" id="text-1-2-3-0-1">
 <ul class="org-ul">
 <li>radiale Kategorisierung = ein Phänomen kann durch eine bestimmte Menge von Eigenschaften konzeptualisiert werden, die allerdings nicht in jedem Fall vorhanden sind (oder vorhanden sein müssen)
@@ -390,7 +415,7 @@ Problem dieses Ansatzes ist, dass er einerseits zu abstrakt ist und andererseits
 </ul>
 </div>
 </li>
-<li><a id="orgc43b56d"></a>Annäherung an eine minimale Definition<br />
+<li><a id="org013ee0f"></a>Annäherung an eine minimale Definition<br />
 <div class="outline-text-6" id="text-1-2-3-0-2">
 <ul class="org-ul">
 <li>implizite Gemeinsamkeit zw Populismuskonzepten, dass es eine Gegenüberstellung von "dem Volk" und "der Elite" gibt
@@ -449,15 +474,184 @@ diese Definition kommt nah an viele andere Populismusdefinitionen
 </div>
 </div>
 
-<div id="outline-container-orgbd76f08" class="outline-3">
-<h3 id="orgbd76f08"><span class="section-number-3">1.3</span> Defition von Demokratie</h3>
+<div id="outline-container-org01979b6" class="outline-3">
+<h3 id="org01979b6"><span class="section-number-3">1.3</span> Definition von Demokratie</h3>
 <div class="outline-text-3" id="text-1-3">
+<ul class="org-ul">
+<li>Ziel ist nicht die Definiton eines neuen Demokratiekonzepts und ein Überblick über vorhandene Definitionen, sondern eine kurze Darstellung der 3 Kernelemente (im Kontext "Demokratie") populistischer Debatten:</li>
+</ul>
+</div>
+<div id="outline-container-orgb359cb9" class="outline-4">
+<h4 id="orgb359cb9"><span class="section-number-4">1.3.1</span> Demokratie</h4>
+<div class="outline-text-4" id="text-1-3-1">
+<ul class="org-ul">
+<li>heutzutage oft synonym mit liberaler Demokratie verwendet anstatt als Demokratie per se</li>
+<li>Demokratie (ohne Zusätze) sei die Kombination von Volkssouveränität und Mehrheitsentscheid
+<ul class="org-ul">
+<li>nicht mehr und nicht weniger, kann also direkt, indirekt, liberal w/e sein</li>
+</ul></li>
+<li>Demokratie ansich bezieht sich auf die Methode wie Herrschaftsträger in kompetitiven Wahlen bestimmt werden
+<ul class="org-ul">
+<li>eine Auswahl durch die Mehrheit des Volkes ist im Kern die Definition von <i>repräsentativer</i> Demokratie</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgdc6ad92" class="outline-4">
+<h4 id="orgdc6ad92"><span class="section-number-4">1.3.2</span> Liberale Demokratie</h4>
+<div class="outline-text-4" id="text-1-3-2">
+<ul class="org-ul">
+<li>da auch umstritten, Wahl der (minimalen) Definition von Dahl:
+<ul class="org-ul">
+<li>allerdings idealistisch konzeptioniert und daher einige Unterschiede zu existierenden Demokratien</li>
+<li>um die Optimierung der Dimensionen "public contestation"(öffentliche Kritik) und "political participation"(pol Teilhabe) zu gewährleisten, benötige es laut Dahl einiger institutionellen Garantien:</li>
+</ul></li>
+<li>Versammlungs- und Organisationsfreiheit</li>
+<li>Meinungsfreiheit</li>
+<li>Wahlrecht</li>
+<li>Right of political leaders to compete for votes</li>
+<li>Amtsfähigkeit</li>
+<li>Alternative sources of information</li>
+<li>freie und gleiche Wahlen</li>
+<li>Institutions for making government policies dependent on votes and other expressions of preference</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org5b76503" class="outline-4">
+<h4 id="org5b76503"><span class="section-number-4">1.3.3</span> Radikale Demokratie</h4>
+<div class="outline-text-4" id="text-1-3-3">
+<ul class="org-ul">
+<li>eher ideeller Typ als existierender Demokratietyp</li>
+<li>Hauptautoren radikaler Demokratie geben keine klare Definiton</li>
+<li>liberale Demokratie sei Konsens zu heilig und ignoriere, dass Demokratie bedeute für etwas und gegen jemanden zu kämpfen
+<ul class="org-ul">
+<li>in diesem Sinne ist radikale Demokratie ähnlich der "demokratisierten Demokratie"</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</div>
+<div id="outline-container-org442cc23" class="outline-3">
+<h3 id="org442cc23"><span class="section-number-3">1.4</span> Populismus &amp; Demokratie: Freund &amp; Feind</h3>
+<div class="outline-text-3" id="text-1-4">
+<ul class="org-ul">
+<li>Populismus hat meist negative Konnotation; Demokratie positive
+<ul class="org-ul">
+<li>das war nicht immer so/ist nicht überall so
+<ul class="org-ul">
+<li>einige sind der Ansicht Populismus sei die reinste Form von Demokratie, oder dass Populismus die Voraussetzung für alles Politische sei</li>
+</ul></li>
+</ul></li>
+<li>Populismus kann beides, eine Gefahr und eine Maßnahme zur Verbesserung, der Demokratie sein
+<ul class="org-ul">
+<li>auf theoret. Ebene ist Populismus essentiell demokratisch, aber doppelseitig im Hinblick auf <i>liberale</i> Demokratie</li>
+</ul></li>
+<li>Populismus hat eine positive Beziehung zu <i>repräsentativer</i> Demokratie
+<ul class="org-ul">
+<li>Populisten fechten nicht die Repräsentation an, sondern die <b>falsche</b> Repräsentation</li>
+</ul></li>
+<li>die Beziehung zwischen Populismus und <i>liberaler</i> Demokratie ist komplizierter
+<ul class="org-ul">
+<li>eine Ursache ist die interne Spannung innerhalb des Konzepts liberaler Demokratie und zwar zum einen Herrschaft der Mehrheit und zum anderen der konstitutionelle Schutz von Minderheiten
+<ul class="org-ul">
+<li>Populismus ist dabei eher auf der Seite der Mehrheitsentscheide (und gegen den Schutz von Minderheitsrecheten)</li>
+</ul></li>
+</ul></li>
+<li>evtl. ist Populismus ein Nebenprodukt von Demokratie und verfolgt sie wie ein Schatten</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgdf5dc55" class="outline-3">
+<h3 id="orgdf5dc55"><span class="section-number-3">1.5</span> Einfluss von Populismus auf Demokratiequalität: Freund &amp; Feind</h3>
+<div class="outline-text-3" id="text-1-5">
+
+<div id="org85016d2" class="figure">
+<p><img src="./demo-qual.png" alt="demo-qual.png" />
+</p>
+<p><span class="figure-number">Figure 1: </span>Dimensionen von Demokratiequalität</p>
+</div>
+<ul class="org-ul">
+<li>pos Effekt = wenn Pop die Qualität von Demokr erhöht</li>
+<li>neg Effekt = wenn Pop die Qualität von Demokr senkt</li>
+<li>Populismus kann alle Dimensionen positiv und negativ beeinflussen</li>
+<li>Literatur führt viele Beispiele an wie Populismus positiv oder negativ beeinflussen kann
+<ul class="org-ul">
+<li>diese sind allerdings oft irrelevant, weil sie im Zusammenhang mit der im Kontext stehenden Ideologie (zB Sozialismus, Nationalismus) stehen oder nicht Teil der hier verwendeten minimalen Pop. definiton sind (zB Art und Weise der Mobilisierung)</li>
+</ul></li>
+</ul>
+</div>
+<div id="outline-container-org053514e" class="outline-4">
+<h4 id="org053514e"><span class="section-number-4">1.5.1</span> Positive Effekte</h4>
+<div class="outline-text-4" id="text-1-5-1">
+<ol class="org-ol">
+<li>Gibt Gruppen die sich nicht (gut) repräsentiert fühlen Sprachrohr (Einbezug marginalisierter Gruppen)</li>
+<li>Mobilisierung ausgegrenzter Gesellschaftsbereiche (zB Unterschicht), verbessert pol Integration</li>
+<li>Repräsentierung ausgeschlossener Gruppen durch Implementierung von gewünschten Policies</li>
+<li>Ideologische Brücke zur Schaffung von sozialen &amp; pol Koaltionen, oft über Klassen hinweg</li>
+<li>Erhöhung demokratischer Accountability (Probleme werden Teil des pol Bereichs, statt bspw des ökonomischen)</li>
+<li>Revitalisierung von öffentlicher Meinung und sozialen Bewegungen, durch Rückkehr der Dimension pol. Konflikte</li>
+</ol>
+</div>
+</div>
+<div id="outline-container-orgb751701" class="outline-4">
+<h4 id="orgb751701"><span class="section-number-4">1.5.2</span> Negative Effekte</h4>
+<div class="outline-text-4" id="text-1-5-2">
+<ol class="org-ol">
+<li>Zuwiederhandeln im Bezug auf checks &amp; balances und Gewaltenteilung durch Volkssouveränität</li>
+<li>Ignoranz von Minderheitsrechten durch Mehrheitsentscheid</li>
+<li>Etablierung eines politischen Cleavage (Populisten vs Nichtpopulisten)</li>
+<li>Moralisierung von Politik (Kompromisse &amp; Konsens werden erschwert)</li>
+<li>Plesbizitäre Transformation von Politik (Untergrabung der Legitimät und Macht von pol Institutionen)</li>
+<li>Minimierung des Politischen und des demokr Raums durch anti-elitäres Agieren</li>
+</ol>
+</div>
+</div>
+</div>
+<div id="outline-container-org0e1bd09" class="outline-3">
+<h3 id="org0e1bd09"><span class="section-number-3">1.6</span> Wann wirkt Populismus positiv?</h3>
+<div class="outline-text-3" id="text-1-6">
+<p>
+Unterteilung von Populismus und Demokratie in schwache &amp; starke Gruppen:
+</p>
+<ul class="org-ul">
+<li>Populismus in der Regierung (stark)</li>
+<li>Populismus in der Opposition (schwach)</li>
+<li>konsolidierte Demokratien (stark)</li>
+<li>nicht-konsolidierte Demokratien (schwach)</li>
+</ul>
+
+<p>
+Annahmen:
+</p>
+<ul class="org-ul">
+<li>Populisten sind effektiver in schwachen Demokratien
+<ul class="org-ul">
+<li>bzw die Stärke der Demokratie beeinflusst die Stärke der Wirkung die Populismus auf jene haben kann</li>
+</ul></li>
+<li>populists will prioritize negative effects in government and positie effects in opposition
+<ul class="org-ul">
+<li>die Stärke des Populismus beeinflusst die Wirkung auf die Demokratie</li>
+</ul></li>
+</ul>
+
+<p>
+Hypothesen:
+</p>
+<ol class="org-ol">
+<li>Populismus innerhalb der Regierung hat stärkeren Effekt auf die Demokratie als Populismus innerhalb der Opposition</li>
+<li>Populismus innerhalb der Regierung hat mehr negative Effekte auf die Demokratie als Populismus innerhalb der Opposition</li>
+<li>Populismus hat stärkere Effekte auf nicht-konsolidierte Demokratien als auf konsolidierte Demokratien</li>
+<li>Populismus innerhalb der Opposition in konsolidierten Demokratien hat moderate positive Effekte auf die Demokratiequalität</li>
+<li>Populismus innerhalb der Opposition in nicht-konsolidierten Demokratien hat moderate positive Effekte auf die Demokratiequalität</li>
+<li>Populismus innerhalb der Regierung in konsolidierten Demokratien hat moderate negative Effekte auf die Demokratiequalität</li>
+<li>Populismus innerhalb der Regierung in nicht-konsolidierten Demokratien hat signifikante negative Effekte auf die Demokratiequalität</li>
+</ol>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-05-06 Sun 14:52</p>
+<p class="date">Created: 2018-05-06 Sun 17:41</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
