--- a/uni/informatik/planner.html
+++ b/uni/informatik/planner.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-09-13 Thu 13:15 -->
+<!-- 2018-09-20 Thu 13:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -239,8 +239,8 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div id="outline-container-org95e89b0" class="outline-2">
-<h2 id="org95e89b0"><span class="section-number-2">1</span> Misc</h2>
+<div id="outline-container-orgb159d51" class="outline-2">
+<h2 id="orgb159d51"><span class="section-number-2">1</span> Misc</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://www.tu-chemnitz.de/verwaltung/studentenamt/abt11/ordnungen/2011/2011/18-2011/AB_182011_2.pdf">Prüfungsordnung</a></li>
@@ -250,12 +250,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org9586f61" class="outline-2">
-<h2 id="org9586f61"><span class="section-number-2">2</span> Pflichtmodule</h2>
+<div id="outline-container-orga163678" class="outline-2">
+<h2 id="orga163678"><span class="section-number-2">2</span> Pflichtmodule</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org0073013" class="outline-3">
-<h3 id="org0073013"><span class="section-number-3">2.1</span> Basismodule</h3>
+<div id="outline-container-org9697d35" class="outline-3">
+<h3 id="org9697d35"><span class="section-number-3">2.1</span> Basismodule</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>29 ETCS benötigt</li>
@@ -298,8 +298,8 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-org55c5240" class="outline-3">
-<h3 id="org55c5240"><span class="section-number-3">2.2</span> Andere</h3>
+<div id="outline-container-org4e53326" class="outline-3">
+<h3 id="org4e53326"><span class="section-number-3">2.2</span> Andere</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>50 ETCS benötigt</li>
@@ -339,8 +339,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org68fbc7b" class="outline-2">
-<h2 id="org68fbc7b"><span class="section-number-2">3</span> Wahlmodule</h2>
+<div id="outline-container-org164131e" class="outline-2">
+<h2 id="org164131e"><span class="section-number-2">3</span> Wahlmodule</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>41 ETCS benötigt</li>
@@ -524,12 +524,12 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orge2b06e1" class="outline-2">
-<h2 id="orge2b06e1"><span class="section-number-2">4</span> Vorläufige Modulplanung</h2>
+<div id="outline-container-orge800754" class="outline-2">
+<h2 id="orge800754"><span class="section-number-2">4</span> Vorläufige Modulplanung</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org4796273" class="outline-3">
-<h3 id="org4796273"><span class="section-number-3">4.1</span> Wahlmodule</h3>
+<div id="outline-container-orgc864b07" class="outline-3">
+<h3 id="orgc864b07"><span class="section-number-3">4.1</span> Angestrebte Wahlmodule</h3>
 <div class="outline-text-3" id="text-4-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -593,7 +593,7 @@ for the JavaScript code in this tag.
 
 <tr>
 <td class="org-left">Einführung in Künstliche Intelligenz</td>
-<td class="org-left">Mathe I + II</td>
+<td class="org-left">Mathematikkenntnisse</td>
 <td class="org-right">5</td>
 </tr>
 
@@ -613,10 +613,234 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
+<div id="outline-container-orgf329ebd" class="outline-3">
+<h3 id="orgf329ebd"><span class="section-number-3">4.2</span> Studienablaufplan</h3>
+<div class="outline-text-3" id="text-4-2">
+</div>
+<div id="outline-container-org2f2bf08" class="outline-4">
+<h4 id="org2f2bf08"><span class="section-number-4">4.2.1</span> Reeller Plan</h4>
+<div class="outline-text-4" id="text-4-2-1">
+<p>
+Reeler Plan:
+</p>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">&#xa0;</th>
+<th scope="col" class="org-left">WiSe 18</th>
+<th scope="col" class="org-left">SoSe 19</th>
+<th scope="col" class="org-left">WiSe 19</th>
+<th scope="col" class="org-left">SoSe 20</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">Algorithmen</td>
+<td class="org-left">Datenstrukturen</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">Informatik I</td>
+<td class="org-left">Informatik II</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Proseminar Informatik</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">WM</td>
+<td class="org-left">Mathe I</td>
+<td class="org-left">Rechnernetze</td>
+<td class="org-left">Entwurf Verteilter Systeme</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">WM</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Einführung Künstliche Intelligenz</td>
+<td class="org-left">Sicherheit Verteilter Systeme</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Maschinelles Lernen</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Betriebssysteme</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken Grundlagen</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken &amp; Webtechniken</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken &amp; Objektorientierung</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div id="outline-container-org3151bfe" class="outline-4">
+<h4 id="org3151bfe"><span class="section-number-4">4.2.2</span> Optimaler Plan</h4>
+<div class="outline-text-4" id="text-4-2-2">
+<p>
+Optimaler Plan (aufgrund von Dependencies und Angeboten nicht möglich):
+</p>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">&#xa0;</th>
+<th scope="col" class="org-left">WiSe 18</th>
+<th scope="col" class="org-left">SoSe 19</th>
+<th scope="col" class="org-left">WiSe 19</th>
+<th scope="col" class="org-left">SoSe 20</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">Algorithmen</td>
+<td class="org-left">Datenstrukturen</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">Informatik I</td>
+<td class="org-left">Informatik II</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">BM</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Proseminar Informatik</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">WM</td>
+<td class="org-left">Betriebssysteme</td>
+<td class="org-left">Rechnernetze</td>
+<td class="org-left">Entwurf Verteilter Systeme</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">WM</td>
+<td class="org-left">Datenbanken Grundlagen</td>
+<td class="org-left">Einführung Künstliche Intelligenz</td>
+<td class="org-left">Sicherheit Verteilter Systeme</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken &amp; Webtechniken</td>
+<td class="org-left">Maschinelles Lernen</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken &amp; Objektorientierung</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-09-13 Thu 13:15</p>
+<p class="date">Created: 2018-09-20 Thu 13:52</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
