Update / finish Inf planner

--- a/uni/informatik/planner.html
+++ b/uni/informatik/planner.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-09-20 Thu 13:52 -->
+<!-- 2018-10-03 Wed 10:56 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -239,23 +239,24 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div id="outline-container-orgb159d51" class="outline-2">
-<h2 id="orgb159d51"><span class="section-number-2">1</span> Misc</h2>
+<div id="outline-container-org9982fdb" class="outline-2">
+<h2 id="org9982fdb"><span class="section-number-2">1</span> Misc</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://www.tu-chemnitz.de/verwaltung/studentenamt/abt11/ordnungen/2011/2011/18-2011/AB_182011_2.pdf">Prüfungsordnung</a></li>
 <li><a href="https://www.tu-chemnitz.de/verwaltung/studentenamt/abt11/ordnungen/2011/2011/18-2011/AB_182011_1.pdf">Studienordnung</a></li>
+<li><a href="https://www.tu-chemnitz.de/studentenservice/zsb/start/start2018.pdf">Infos fuer Studienanfänger</a></li>
 <li>120 ETCS insgesamt benötigt</li>
 <li>"Ein Fernstudium ist nicht vorgesehen. Der Studiengang kann bei Berufstätigkeit oder besonderen familiären Verpflichtungen in Teilzeit studiert werden. Im Teilzeitstudium beträgt der durchschnittliche Arbeitsaufwand pro Semester 50 % des Vollzeitstudiums. Die Wochenarbeitszeit der Berufstätigkeit muss mindestens 18 Stunden betragen."</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga163678" class="outline-2">
-<h2 id="orga163678"><span class="section-number-2">2</span> Pflichtmodule</h2>
+<div id="outline-container-orgc0e8877" class="outline-2">
+<h2 id="orgc0e8877"><span class="section-number-2">2</span> Pflichtmodule</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org9697d35" class="outline-3">
-<h3 id="org9697d35"><span class="section-number-3">2.1</span> Basismodule</h3>
+<div id="outline-container-org399494b" class="outline-3">
+<h3 id="org399494b"><span class="section-number-3">2.1</span> Basismodule</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>29 ETCS benötigt</li>
@@ -298,8 +299,8 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-org4e53326" class="outline-3">
-<h3 id="org4e53326"><span class="section-number-3">2.2</span> Andere</h3>
+<div id="outline-container-orgc3e7b62" class="outline-3">
+<h3 id="orgc3e7b62"><span class="section-number-3">2.2</span> Andere</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>50 ETCS benötigt</li>
@@ -339,8 +340,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org164131e" class="outline-2">
-<h2 id="org164131e"><span class="section-number-2">3</span> Wahlmodule</h2>
+<div id="outline-container-org78cb2d4" class="outline-2">
+<h2 id="org78cb2d4"><span class="section-number-2">3</span> Wahlmodule</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>41 ETCS benötigt</li>
@@ -524,104 +525,19 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orge800754" class="outline-2">
-<h2 id="orge800754"><span class="section-number-2">4</span> Vorläufige Modulplanung</h2>
+<div id="outline-container-org3091532" class="outline-2">
+<h2 id="org3091532"><span class="section-number-2">4</span> Modulplanung</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgc864b07" class="outline-3">
-<h3 id="orgc864b07"><span class="section-number-3">4.1</span> Angestrebte Wahlmodule</h3>
+<div id="outline-container-org160a01d" class="outline-3">
+<h3 id="org160a01d"><span class="section-number-3">4.1</span> Studienablaufplan</h3>
 <div class="outline-text-3" id="text-4-1">
-<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-
-
-<colgroup>
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-right" />
-</colgroup>
-<thead>
-<tr>
-<th scope="col" class="org-left">Titel</th>
-<th scope="col" class="org-left">Voraussetzung</th>
-<th scope="col" class="org-right">Credits</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="org-left">Rechnernetze</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Entwurf Verteilter Systeme</td>
-<td class="org-left">Rechnernetze</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Sicherheit Verteilter Systeme</td>
-<td class="org-left">Rechnernetze</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Betriebssysteme</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Datenbanken Grundlagen</td>
-<td class="org-left">DS &amp; Algos; Betriebssysteme</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Datenbanken und Webtechniken</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Datenbanken und Objektorientierung</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Einführung in Künstliche Intelligenz</td>
-<td class="org-left">Mathematikkenntnisse</td>
-<td class="org-right">5</td>
-</tr>
-
-<tr>
-<td class="org-left">Maschinelles Lernen</td>
-<td class="org-left">Einführung in die KI</td>
-<td class="org-right">5</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="org-left">Summe</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">45</td>
-</tr>
-</tbody>
-</table>
 </div>
-</div>
-<div id="outline-container-orgf329ebd" class="outline-3">
-<h3 id="orgf329ebd"><span class="section-number-3">4.2</span> Studienablaufplan</h3>
-<div class="outline-text-3" id="text-4-2">
-</div>
-<div id="outline-container-org2f2bf08" class="outline-4">
-<h4 id="org2f2bf08"><span class="section-number-4">4.2.1</span> Reeller Plan</h4>
-<div class="outline-text-4" id="text-4-2-1">
+<div id="outline-container-org1c97bb0" class="outline-4">
+<h4 id="org1c97bb0"><span class="section-number-4">4.1.1</span> Solution Plan</h4>
+<div class="outline-text-4" id="text-4-1-1">
 <p>
-Reeler Plan:
+Der finale Plan der verfolgt wird
 </p>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -651,15 +567,15 @@ Reeler Plan:
 <td class="org-left">BM</td>
 <td class="org-left">Algorithmen</td>
 <td class="org-left">Datenstrukturen</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">Forschungsseminar</td>
+<td class="org-left">Masterarbeit</td>
 </tr>
 
 <tr>
 <td class="org-left">BM</td>
 <td class="org-left">Informatik I</td>
 <td class="org-left">Informatik II</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">Forschungspraktikum</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -681,56 +597,32 @@ Reeler Plan:
 
 <tr>
 <td class="org-left">WM</td>
-<td class="org-left">Mathe I</td>
-<td class="org-left">Rechnernetze</td>
 <td class="org-left">Entwurf Verteilter Systeme</td>
+<td class="org-left">Rechnernetze</td>
+<td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">WM</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Einführung Künstliche Intelligenz</td>
-<td class="org-left">Sicherheit Verteilter Systeme</td>
+<td class="org-left">Einführung Künstliche Intelligenz [Opt1]</td>
+<td class="org-left">Maschinelles Lernen[Opt1]</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Maschinelles Lernen</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Betriebssysteme</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">WM</td>
 <td class="org-left">Datenbanken Grundlagen</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
 <td class="org-left">Datenbanken &amp; Webtechniken</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken &amp; Objektorientierung</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Datenbanken &amp; Objektorientierung</td>
+<td class="org-left">WM</td>
+<td class="org-left">Industrielle IT-Anwendungen der Informatik</td>
+<td class="org-left">Betriebssysteme</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -738,13 +630,16 @@ Reeler Plan:
 </table>
 </div>
 </div>
+</div>
+</div>
 
-<div id="outline-container-org3151bfe" class="outline-4">
-<h4 id="org3151bfe"><span class="section-number-4">4.2.2</span> Optimaler Plan</h4>
-<div class="outline-text-4" id="text-4-2-2">
-<p>
-Optimaler Plan (aufgrund von Dependencies und Angeboten nicht möglich):
-</p>
+<div id="outline-container-org8261e28" class="outline-2">
+<h2 id="org8261e28"><span class="section-number-2">5</span> Stundenpläne</h2>
+<div class="outline-text-2" id="text-5">
+</div>
+<div id="outline-container-orgc4e0c37" class="outline-3">
+<h3 id="orgc4e0c37"><span class="section-number-3">5.1</span> WiSe 18/19</h3>
+<div class="outline-text-3" id="text-5-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -758,89 +653,81 @@ Optimaler Plan (aufgrund von Dependencies und Angeboten nicht möglich):
 <col  class="org-left" />
 
 <col  class="org-left" />
+
+<col  class="org-left" />
 </colgroup>
 <thead>
 <tr>
-<th scope="col" class="org-left">&#xa0;</th>
-<th scope="col" class="org-left">WiSe 18</th>
-<th scope="col" class="org-left">SoSe 19</th>
-<th scope="col" class="org-left">WiSe 19</th>
-<th scope="col" class="org-left">SoSe 20</th>
+<th scope="col" class="org-left">Time</th>
+<th scope="col" class="org-left">Mo</th>
+<th scope="col" class="org-left">Di</th>
+<th scope="col" class="org-left">Mi</th>
+<th scope="col" class="org-left">Do</th>
+<th scope="col" class="org-left">Fr</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="org-left">BM</td>
-<td class="org-left">Algorithmen</td>
-<td class="org-left">Datenstrukturen</td>
+<td class="org-left">07:30 - 09:00</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">BM</td>
-<td class="org-left">Informatik I</td>
-<td class="org-left">Informatik II</td>
 <td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I [VL]</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-left">BM</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Proseminar Informatik</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
+<td class="org-left">09:15 - 10:45</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I [Übung/Prakt] im Wechsel</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-left">WM</td>
-<td class="org-left">Betriebssysteme</td>
-<td class="org-left">Rechnernetze</td>
-<td class="org-left">Entwurf Verteilter Systeme</td>
+<td class="org-left">11:30 - 13:00</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Datenbanken [VL]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+</tr>
+
+<tr>
+<td class="org-left">13:45 - 15:15</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Verteile Systeme [VL ab 13:30]</td>
+<td class="org-left">Datenbanken [Übung]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [Übung]</td>
+</tr>
+
+<tr>
+<td class="org-left">15:30 - 17:00</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [Tut]</td>
+<td class="org-left">IT-Anwendungen [VL]</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-left">WM</td>
-<td class="org-left">Datenbanken Grundlagen</td>
-<td class="org-left">Einführung Künstliche Intelligenz</td>
-<td class="org-left">Sicherheit Verteilter Systeme</td>
+<td class="org-left">17:15 - 18:45</td>
 <td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Datenbanken &amp; Webtechniken</td>
-<td class="org-left">Maschinelles Lernen</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">Datenbanken &amp; Objektorientierung</td>
+<td class="org-left">Algo &amp; Prog [Tut]</td>
+<td class="org-left">Verteilte Systeme [Übung]</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
-</div>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-09-20 Thu 13:52</p>
+<p class="date">Created: 2018-10-03 Wed 10:56</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
